[gd_scene load_steps=6 format=3 uid="uid://djd5hvlykjgse"]

[ext_resource type="Script" path="res://scenes/fractions_minigame/level_fractions_minigame/Scripts/LevelFractionsMinigame.gd" id="1_jhhw6"]
[ext_resource type="Script" path="res://components/answer_button/AnswerButton.gd" id="2_7w5aa"]
[ext_resource type="Script" path="res://scenes/fractions_minigame/level_fractions_minigame/Scripts/ExtrasContainer.gd" id="3_pyfw0"]
[ext_resource type="PackedScene" uid="uid://b1konyslocvmf" path="res://components/clock/Clock.tscn" id="4_qciux"]
[ext_resource type="Script" path="res://scenes/fractions_minigame/level_fractions_minigame/Scripts/ScoreLabel.gd" id="5_v1hlr"]

[node name="LevelFractionsMinigame" type="Node2D"]
visible = false
script = ExtResource("1_jhhw6")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34082
anchor_top = 0.300347
anchor_right = 0.662109
anchor_bottom = 0.713542
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2
metadata/_edit_use_anchors_ = true

[node name="AnswerButton1" type="Button" parent="CanvasLayer/Control/GridContainer"]
layout_mode = 2
script = ExtResource("2_7w5aa")

[node name="AnswerButton2" type="Button" parent="CanvasLayer/Control/GridContainer"]
layout_mode = 2
script = ExtResource("2_7w5aa")

[node name="AnswerButton3" type="Button" parent="CanvasLayer/Control/GridContainer"]
layout_mode = 2
script = ExtResource("2_7w5aa")

[node name="AnswerButton4" type="Button" parent="CanvasLayer/Control/GridContainer"]
layout_mode = 2
script = ExtResource("2_7w5aa")

[node name="ExtrasContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.699219
anchor_top = 0.37934
anchor_right = 0.967773
anchor_bottom = 0.592882
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 17
script = ExtResource("3_pyfw0")
metadata/_edit_use_anchors_ = true

[node name="DrinksLabel" type="Label" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Bebidas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Drinks" type="HSlider" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 5.0
tick_count = 6
ticks_on_borders = true

[node name="BreadsLabel" type="Label" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Panes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Breads" type="HSlider" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="AcceptButton" type="Button" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_left = 730.0
offset_top = 498.0
offset_right = 1005.0
offset_bottom = 548.0
size_flags_vertical = 3
text = "Aceptar"

[node name="Clock" parent="CanvasLayer" instance=ExtResource("4_qciux")]

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 50)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ScorePanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_v1hlr")

[connection signal="pressed" from="CanvasLayer/Control/GridContainer/AnswerButton1" to="." method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GridContainer/AnswerButton2" to="." method="_on_answer_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GridContainer/AnswerButton3" to="." method="_on_answer_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GridContainer/AnswerButton4" to="." method="_on_answer_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/AcceptButton" to="." method="_on_accept_button_pressed"]
